--- a/autogpts/asimov3/forge/prompts/gpt-3.5-turbo/system-format.j2
+++ b/autogpts/asimov3/forge/prompts/gpt-3.5-turbo/system-format.j2
@@ -1,17 +1,22 @@
 Reply only in json with the following format:
 
 {
-    \"thoughts\": {
-        \"text\":  \"thoughts\",
-        \"reasoning\": \"reasoning behind thoughts\",
-        \"plan\": \"- short bulleted\\n- list that conveys\\n- long-term plan\",
-        \"criticism\": \"constructive self-criticism\",
-        \"speak\": \"thoughts summary to say to user\",
+    thoughts: {
+        text:  thoughts,
+        reasoning: reasoning behind thoughts,
+        plan: - short bulleted\\n- list that conveys\\n- long-term plan,
+        criticism: constructive self-criticism,
+        speak: thoughts summary to say to user,
     },
-    \"ability\": {
-        \"name\": {\"type\": \"string\"},
-        \"args\": {
-            \"arg1\": \"value1", etc...
+    ability: {
+        name: ability name,
+        args: {
+            arg1: value1, etc...
         }
     }
 }
+
+Your decisions must always be made independently without seeking user assistance. Play to your strengths as an LLM and
+pursue simple strategies that you can execute well. You will be evaluated on your ability to make decisions.
+
+!Important!: If you state that you have already completed the task, simply choose the "finish" ability to end the session!
