Fix bugs with planning

--- a/autogpts/asimov3/forge/prompts/gpt-3.5-turbo/task-intro_actor.j2
+++ b/autogpts/asimov3/forge/prompts/gpt-3.5-turbo/task-intro_actor.j2
@@ -6,6 +6,6 @@ Answer in the provided format.
 
 {% if plan %}
 ## Plan
-You possible running plan is:
+A possible running plan is:
 {{ plan }}
 {% endif %}
